--- a/det.html
+++ b/det.html
@@ -44,7 +44,7 @@
         </script>
           <!-- over -->
           <div class="qr">
-            <img alt=""class="group" src="images/qcode.png">
+            <img alt=""class="group" src="qcode.png">
             </div>
             <div class="scan">
                 <p><h1>Scan QR Code</h1></h1Scan></p>
