--- a/det2.html
+++ b/det2.html
@@ -42,7 +42,7 @@
             })
         </script>
           <div class="qr">
-            <img alt=""class="group" src="images/qcode.png">
+            <img alt=""class="group" src="qcode.png">
             </div>
             <div class="scan">
                 <p><h1>Scan QR Code</h1></h1Scan></p>
